# CV_Realtime-Filtering-Cartoonize

./: .clang-format  CMakeLists.txt  README.md
A1_filtering/: .gitignore  CMakeLists.txt
A1_filtering/include/: filters.hpp
A1_filtering/src/: filters.cpp  imgDisplay.cpp  vidDisplay.cpp
include/: filters.hpp
src/: filters.cpp  imgDisplay.cpp  vidDisplay.cpp
